--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
-      - aws deploy push --application-name kadai5dp-2 --s3-location s3://kadai5s3-2/artifact.zip --source src
+      - aws deploy push --application-name kadai5app-2 --s3-location s3://kadai5s3-2/artifact.zip --source src
 artifacts:
   files:
     - '**/*'
